@@ -145,11 +145,16 @@ get_header(); ?>
 					
 					<nav id="image-navigation" class="nav-single">
 							
-							<?php manduca_adjacent_image_link( true ); ?>
-							<?php manduca_adjacent_image_link( false ) ; ?>  
+							<div class="nav-previous">
+								<?php previous_image_link( false, __( 'Previous', 'manduca' ) ) ; ?> 
+							</div>
 							
-					</nav><!-- .nav-single -->
-					
+							<div class="nav-next">
+								<?php next_image_link( false, __( 'Next', 'manduca' ) ) ; ?>
+							</div>
+							
+							
+						</nav><!-- .nav-single -->
 
 				</article><!-- #post -->
 
